--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.class
+*.yml
 
 # BlueJ files
 *.ctxt
@@ -16,3 +17,5 @@ hs_err_pid*
 
 node_modules/
 target/
+
+src/main/resources/application.yml
