Renombre de carpeta validate
Renombre de carpeta validaciones a validate.
Renombre de carpeta validate en componentes que realicen validaciones.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ node_modules/
 target/
 
 src/main/resources/application.yml
+src/main/resources/static/app/bundle.js
+src/main/resources/static/app/bundle.js.map
