--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "main": "webpack.config.js",
   "dependencies": {
-  	"axios": "^0.15.3",
-  	"prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "prop-types": "15.6.0",
+    "react": "16.1.1",
+    "react-dom": "16.1.1",
+    
     "react-icons": "^2.2.7",
     "react-media": "^1.6.1",
     "react-motion": "^0.5.2",
     "react-redux": "^5.0.5",
-    "react-router": "^3.0.0",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-offline": "^2.0.0",
     "redux-thunk": "^2.2.0",
+    
+    "axios": "^0.15.3",
+  	
+    
     
     "classnames": "^2.2.5",
     "lodash": "^4.13.1",
@@ -34,13 +38,11 @@
     "superagent": "^3.3.1",
     
     "rest": "^1.3.1",
-    "webpack": "^1.12.2"
+    "webpack": "^1.12.2",
+    
+    "moment": "2.22.1"
   },
-  "peerDependencies": {
-    "react": "^15.5.4",
-    "react-native": "0.51.0",
-    "prop-types": "^15.5.10"
-  },
+  
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
@@ -60,6 +62,6 @@
     "react-native",
     "react-component"
   ],
-  "author": "",
+  "author": "Francisco Cerna Fukuzaki",
   "license": "ISC"
 }
