--- a/package.json
+++ b/package.json
@@ -7,21 +7,16 @@
     "prop-types": "15.6.0",
     "react": "16.1.1",
     "react-dom": "16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     
-    "react-icons": "^2.2.7",
-    "react-media": "^1.6.1",
-    "react-motion": "^0.5.2",
-    "react-redux": "^5.0.5",
     "react-router": "^3.0.2",
-    "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-offline": "^2.0.0",
     "redux-thunk": "^2.2.0",
     
     "axios": "^0.15.3",
   	
-    
-    
     "classnames": "^2.2.5",
     "lodash": "^4.13.1",
     "validator": "^5.4.0",
@@ -38,29 +33,30 @@
     "superagent": "^3.3.1",
     
     "rest": "^1.3.1",
-    "webpack": "^1.12.2",
+    "webpack": "^1.13.2",
     
     "moment": "2.22.1"
   },
-  
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "css-loader": "0.28.7",
+    "style-loader": "0.19.0"
   },
   "scripts": {
     "watch": "webpack --watch -d"
   },
   "keywords": [
+    "java",
+    "springboot",
     "rest",
-    "hateoas",
-    "spring",
-    "data",
     "react",
     "react-native",
-    "react-component"
+    "react-component",
+    "redux"
   ],
   "author": "Francisco Cerna Fukuzaki",
   "license": "ISC"
