--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-dom": "16.1.1",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-immutable": "4.0.0",
+    "immutable": "3.8.2",
+    
     
     "react-router": "^3.0.2",
     "redux-logger": "^3.0.6",
