--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,17 @@ controlhoras.authorized.group.fabrica.analista: ROLE_ANALISTA_FABRICA
 # MYSQL DATABASE CONFIGURATION
 # ------------------------------
 #spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost/ControlHoras?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=ohayou
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-#spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.mysql.datasource.url=jdbc:mysql://localhost/ControlHoras?useSSL=false
-#spring.mysql.datasource.username=root
-#spring.mysql.datasource.password=ohayou
-#spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/ControlHoras?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=ohayou
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+##spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
+##spring.mysql.datasource.url=jdbc:mysql://localhost/ControlHoras?useSSL=false
+##spring.mysql.datasource.username=root
+##spring.mysql.datasource.password=ohayou
+##spring.mysql.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # BEGUG QUERY
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
