--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,16 @@
 			<scope>provided</scope>
 		</dependency>
 		-->
+		
+		<!--<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.1-901.jdbc4</version>
+		</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
